--- a/About_Us.html
+++ b/About_Us.html
@@ -50,7 +50,7 @@
             <div class="member-info">
                 <h2>Omar Faris</h2>
                 <p>Grade XI<br>Project lead</p>
-                <p class="team">Team: Undetermined</p>
+                <p class="team">Team: Rizzlers FC</p>
                 <div class="social-links">
                     <a href="https://www.instagram.com/clutchmar/" target="_blank">
                         <img src="ImagesArchive/Instagram.png" alt="Instagram">
@@ -69,7 +69,7 @@
             <div class="member-info">
                 <h2>Devanathan NV Acharya</h2>
                 <p>Grade XI<br>Lead Video Editor</p>
-                <p class="team">Team: Undetermined</p>
+                <p class="team">Team: Ball Handlers FC</p>
                 <div class="social-links">
                     <a href="https://www.instagram.com/imafemalenocap/" target="_blank">
                         <img src="ImagesArchive/Instagram.png" alt="Instagram">
@@ -88,7 +88,7 @@
             <div class="member-info">
                 <h2>Akil Adithya</h2>
                 <p>Grade XI<br>Primary developer and coder of KC FL Season 4 Website.</p>
-                <p class="team">Team: Undetermined</p>
+                <p class="team">Team: Rizzlers FC</p>
                 <div class="social-links">
                     <a href="https://www.instagram.com/redsparrowdagreat/" target="_blank">
                         <img src="ImagesArchive/Instagram.png" alt="Instagram">
