--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="ImagesArchive/KC_FL_Logo.jpg">
     <!-- Main CSS -->
     <link rel="stylesheet" href="MainCss.css">
 </head>
