--- a/MeetTheTeam.html
+++ b/MeetTheTeam.html
@@ -27,7 +27,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="MeetTheTeam.html">Meet the Squads</a></li>
-                    <li><a href="History.html">History</a></li>
+                    <li><a href="History.html">Fixtures</a></li>
                     <li><a href="About_Us.html">About us</a></li>
                 </ul>
                 <div class="hamburger" id="mobile-menu" aria-label="Toggle navigation" role="button" tabindex="0">
@@ -191,10 +191,6 @@
                             <div class="player">
                                 Devanathan NV Acharya - Captain
                                 <img class="player-stats" src="ImagesArchive/PlayerStats/Devanathan.png" alt="John Doe Stats">
-                            </div>
-                            <div class="player">
-                                Vikram
-                                <img class="player-stats" src="ImagesArchive/PlayerStats/Vikram.png" alt="John Cena Stats">
                             </div>
                             <div class="player">
                                 Sanjay Ramakrishnan
@@ -420,7 +416,7 @@
                     <h3>Quick Links</h3>
                     <div><a href="index.html">Home</a></div>
                     <div><a href="MeetTheTeam.html">Meet the Squads</a></div>
-                    <div><a href="History.html">History</a></div>
+                    <div><a href="History.html">Fixtures</a></div>
                     <div><a href="About_Us.html">About Us</a></div>
                 </div>
                 <div class="social-links">
