--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="MeetTheTeam.html">Meet the Squads</a></li>
-                <li><a href="History.html">History</a></li>
+                <li><a href="History.html">Fixtures</a></li>
                 <li><a href="About_Us.html">About us</a></li>
             </ul>
             <div class="hamburger" id="mobile-menu">
@@ -117,7 +117,7 @@
                     <h3>Quick Links</h3>
                     <div><a href="index.html">Home</a></div>
                     <div><a href="MeetTheTeam.html">Meet the Squads</a></div>
-                    <div><a href="History.html">History</a></div>
+                    <div><a href="History.html">Fixtures</a></div>
                     <div><a href="About_Us.html">About Us</a></div>
                 </div>
                 <div class="social-links">
