--- a/History.html
+++ b/History.html
@@ -359,7 +359,7 @@
         <div class="header">
             <div class="linebro">
                 <img src="ImagesArchive/KC_FL_Logo.jpg" class="logo"/>
-                <h1>KCFL Points Table</h1>
+                <h1>KCFL Points Table (will update next week) </h1>
             </div>            
         </div>
         <div class="table-container">
